--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-github-calendar": "^4.1.2",
     "react-particles": "^2.12.2",
     "react-parallax": "^3.5.1",
+    "react-router-dom": "^6.8.1",
     "react-tilt": "^1.0.2",
     "tsparticles": "^2.12.0",
     "lottie-react": "^2.4.0",
